Upgrade to Spark 2.0.0, address ISSUE-55 and ISSUE-36